[package]
name = "smart-pointer"
description = "Traits for smart pointer functionality."
repository = "https://github.com/AljoschaMeyer/smart-pointer-rs"
version = "0.2.0"
authors = ["Aljoscha Meyer <mail@aljoscha-meyer.de>"]
edition = "2018"
license = "CC-PDDC"

[features]
default = []

alloc = [ "maybe-std/alloc" ]
std = [ "maybe-std/std" ]
# unstable = [ "maybe-std/unstable" ]

[dependencies]
maybe-std = "0.1.2"
